# compgear

./: .clang-format  .gitignore  CMakeLists.txt  controller.cpp  controller.h  gui.cpp  main.cpp
controller/: controller.cpp  controller.h
data/: affix_sorter.cpp  affix_sorter.h
gui/: gui.cpp
model/: model.cpp  model.h
